--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "private": true,
   "name": "alerts-dashboard",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "scripts": {
     "start": "nr1 nerdpack:serve",
-    "test": "exit 0"
+    "test": "exit 0",
+    "eslint-check": "eslint nerdlets/",
+    "eslint-fix": "eslint nerdlets/ --fix"
   },
   "nr1": {
-    "uuid": "4f88c61a-d0a9-4763-a007-02a51a7100f7"
+    "uuid": "4257f4e8-3542-4631-8211-4c32a1e3ffd2"
   },
   "dependencies": {
     "prop-types": "^15.6.2",
@@ -15,11 +17,23 @@
     "react-dom": "^16.6.3",
     "react-flipcard": "^0.2.1",
     "react-ui-cards": "^1.5.0",
-    "semantic-ui-react": "^0.87.1"
+    "semantic-ui-react": "^0.87.1",
+    "react-loadingg": "^1.7.1"
   },
   "browserslist": [
     "last 2 versions",
     "not ie < 11",
     "not dead"
-  ]
+  ],
+  "devDependencies": {
+    "@newrelic/eslint-plugin-newrelic": "^0.3.0",
+    "@semantic-release/changelog": "^3.0.5",
+    "@semantic-release/git": "^7.0.18",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.6.0",
+    "eslint-config-prettier": "^6.2.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.14.3",
+    "prettier": "^1.18.2"
+  }
 }
