--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ tmp
 node_modules
 nerdlets/alerts-dashboard-nerdlet/test-dashboard.js
 alerts-dashboard/dist/metadata.json
+.DS_Store
+dist/metadata.json
