--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "eslint-fix": "eslint nerdlets/ --fix"
   },
   "nr1": {
-    "uuid": "4257f4e8-3542-4631-8211-4c32a1e3ffd2"
+    "uuid": "dc235508-b24f-4845-957e-a62e544a9512"
   },
   "dependencies": {
     "prop-types": "^15.6.2",
@@ -18,7 +18,8 @@
     "react-flipcard": "^0.2.1",
     "react-ui-cards": "^1.5.0",
     "semantic-ui-react": "^0.87.1",
-    "react-loadingg": "^1.7.1"
+    "react-loadingg": "^1.7.1",
+    "react-full-screen": "^0.2.4"
   },
   "browserslist": [
     "last 2 versions",
